endpoint for hotel and their address management
